--- a/src/main/webapp/css/cover.css
+++ b/src/main/webapp/css/cover.css
@@ -30,7 +30,8 @@ body {
   background-color: #333;
 }
 body {
-  color: #fff;
+	  color: #fff;
+  //color: #dbff07;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
